# atlas

./: .clang-format  CMakeLists.txt  README.md
examples/simple/: CMakeLists.txt
examples/simple/src/: app.cpp  application.cpp  application.hpp  main.cpp  main_layer.cpp  main_layer.hpp  main_stage.cpp  main_stage.hpp
include/atlas/: application.hpp  core.hpp  debug.hpp  events.hpp  math.hpp  types.hpp
include/atlas/debug/: assert.hpp  break.hpp  log.hpp
include/atlas/events/: event.hpp  event.inl  key_codes.hpp  key_codes.inl  mouse_codes.hpp  mouse_codes.inl
include/atlas/math/: common.hpp  constants.hpp  matrix4x4.hpp  matrix4x4.inl  matrix_func.hpp  matrix_func.inl  matrix_transform.hpp  matrix_transform.inl  quaternion.hpp  quaternion.inl  quaternion_func.hpp  quaternion_func.inl  trigonometric.hpp  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl  vector_func.hpp  vector_func.inl
include/atlas/window/: stage.hpp  window.hpp
include/atlas/windowing/: layer.hpp  window.hpp
src/atlas/: application.cpp
src/atlas/debug/: assert.cpp  break.cpp  log.cpp
src/atlas/main/win32/: main.cpp
src/atlas/system/win32/: error.cpp  string.cpp  win32.hpp  win32_code_translation.cpp  win32_code_translation.hpp  win32_error.cpp  win32_error.hpp  win32_string.cpp  win32_string.hpp
src/atlas/window/: window.cpp
src/atlas/window/win32/: window.cpp  window.hpp
src/atlas/windowing/: window.cpp
src/atlas/windowing/win32/: win32_window.cpp  win32_window.hpp
tests/: CMakeLists.txt  main.cpp
tests/math/: matrix4x4.cpp  matrix_func.cpp  matrix_transform.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vector_func.cpp
